test/langtools/tools/javac/valhalla/lworld-values/ValueAnnotationOnAnonymousClass.out
ValueAnnotationOnAnonymousClass.java:11:24: compiler.err.mod.not.allowed.here: value
ValueAnnotationOnAnonymousClass.java:12:29: compiler.err.empty.value.not.yet
2 errors
